# src/FacilityManagement.App/src/app/@api/models/complete-maintenance-request-request.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+export interface CompleteMaintenanceRequestRequest {
+  maintenanceRequestId?: string;
+  workCompleted?: string;
+  workCompletedByName?: string;
+}
