# src/FacilityManagement.App/src/app/@api/models/complete-maintenance-request-response.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+import { MaintenanceRequestDto } from './maintenance-request-dto';
+export interface CompleteMaintenanceRequestResponse {
+  errors?: Array<string>;
+  maintenanceRequest?: MaintenanceRequestDto;
+}
