# src/FacilityManagement.App/src/app/@api/models/receive-maintenance-request-response.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+import { MaintenanceRequestDto } from './maintenance-request-dto';
+export interface ReceiveMaintenanceRequestResponse {
+  errors?: Array<string>;
+  maintenanceRequest?: MaintenanceRequestDto;
+}
