# src/FacilityManagement.App/src/app/@api/models/start-maintenance-request-response.ts
@@ -1,6 +1,6 @@
 /* tslint:disable */
 import { MaintenanceRequestDto } from './maintenance-request-dto';
-export interface UpdateMaintenanceRequestResponse {
+export interface StartMaintenanceRequestResponse {
   errors?: Array<string>;
   maintenanceRequest?: MaintenanceRequestDto;
 }
