# src/FacilityManagement.App/src/app/@api/models/update-maintenance-request-work-details-request.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+export interface UpdateMaintenanceRequestWorkDetailsRequest {
+  maintenanceRequestId?: string;
+  workDetails?: string;
+}
