# src/FacilityManagement.Core/AggregatesModel/MaintenanceRequestAggregate/Commands/CreateMaintenanceRequest.cs
@@ -1,10 +1,8 @@
 using FacilityManagement.Core.Interfaces;
-using FacilityManagement.SharedKernel.Identity;
 using FluentValidation;
 using MediatR;
 using Microsoft.Extensions.Logging;
 using System.Text.Json.Serialization;
-using static FacilityManagement.Core.CoreConstants;
 
 namespace FacilityManagement.Core
 {
@@ -22,7 +20,6 @@ namespace FacilityManagement.Core
         }
     }
 
-    //[AuthorizeResourceOperation(nameof(Operations.Write), nameof(Aggregates.MaintenanceRequest))]
     public class CreateMaintenanceRequestRequest: IRequest<CreateMaintenanceRequestResponse>
     {
         public Guid RequestedByProfileId { get; set; }
