# src/FacilityManagement.Core/AggregatesModel/MaintenanceRequestAggregate/DomainEvents/UpdateMaintenanceRequestDescription.cs
@@ -3,5 +3,9 @@
     public class UpdateMaintenanceRequestDescription
     {
         public string Description { get; set; }
+        public UpdateMaintenanceRequestDescription(string description)
+        {
+            Description = description;
+        }
     }
 }
